manifest/comfyui-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: comfyui
