manifest/cloudflare-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tunnel: cf-tunnel
  name: cf-tunnel
  namespace: default
spec:
  replicas: 2 # you might want to adjust the replicas to your own needs
  selector:
    matchLabels:
      tunnel: cf-tunnel
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        tunnel: cf-tunnel
    spec:
      containers:
        - args:
            - tunnel
            - --no-autoupdate
            - --metrics
            - 0.0.0.0:8081
            - run
            - --token
            - $(token)
          image: cloudflare/cloudflared:latest # you might want to pin this to a version
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ready
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
          name: tunnel
          ports:
            - containerPort: 8081
              name: http-metrics
