manifest/automatic1111.yaml
#from https://github.com/ai-dock/stable-diffusion-webui/issues/25
apiVersion: v1
kind: Namespace
metadata:
  name: a1111
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: automatic1111
  namespace: a1111
  labels:
    app: automatic1111
spec:
  replicas: 1
  selector:
    matchLabels:
      app: automatic1111
  template:
    metadata:
      labels:
        app: automatic1111
    spec:
      securityContext:
        fsGroup: 1111
      #securityContext:
      #  runAsUser: 1000
      #  runAsGroup: 1000
      #  fsGroup: 1000
      #securityContext:
      #  runAsUser: 1000  # Use the UID that matches the container user
      #  runAsGroup: 1111 # Use the GID that matches the container group
      #  fsGroup: 1111    # This will recursively chown the volume mount
      containers:
      - name: automatic1111-container
        image: ghcr.io/ai-dock/stable-diffusion-webui:latest
        ports:
        - containerPort: 7860
        resources:
          limits:
            nvidia.com/gpu: 1
            memory: "8Gi"
            cpu: "12"
        volumeMounts:
        - name: models-volume
          mountPath: /opt/stable-diffusion-webui/models
      volumes:
      - name: models-volume
        persistentVolumeClaim:
          claimName: automatic1111-models-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: automatic1111-service
  namespace: a1111
spec:
  type: NodePort  # Use LoadBalancer if you're on a cloud that supports it
  selector:
    app: automatic1111
  ports:
    - name: frontend
      protocol: TCP
      port: 7860
      targetPort: 7860
      # If using NodePort, you can optionally specify the nodePort:
      nodePort: 30333
