manifest/guacamole-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guacamole
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
  namespace: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacd
  template:
    metadata:
      labels:
        app: guacd
    spec:
      containers:
      - name: guacd
        image: linuxserver/guacd:latest
        volumeMounts:
        - name: drive
          mountPath: /drive
        - name: record
          mountPath: /record
      volumes:
      - name: drive
        persistentVolumeClaim:
          claimName: guacd-drive-pvc
      - name: record
        persistentVolumeClaim:
          claimName: guacd-record-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13.4
        volumeMounts:
        - name: init
          mountPath: /docker-entrypoint-initdb.d
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: init
        configMap:
          name: postgres-init-script
          defaultMode: 0755
      - name: data
        persistentVolumeClaim:
          claimName: postgres-pvc
        
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacamole
  namespace: guacamole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacamole
  template:
    metadata:
      labels:
        app: guacamole
    spec:
      containers:
      - name: guacamole
        image: jwetzell/guacamole:amd64
        volumeMounts:
        - name: drive
          mountPath: /drive
        - name: guacamole-data
          mountPath: /config
      volumes:
      - name: drive
        persistentVolumeClaim:
          claimName: guacamole-drive-pvc
      - name: guacamole-data
        persistentVolumeClaim:
          claimName: guacamole-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: guacd
  namespace: guacamole
spec:
  selector:
    app: guacd
  ports:
    - protocol: TCP
      port: 4822
      targetPort: 4822
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: guacamole
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: guacamole
  namespace: guacamole
spec:
  selector:
    app: guacamole
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
