manifest/mlflow-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlflow-system
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-mlflow
  namespace: mlflow-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql-mlflow
  template:
    metadata:
      labels:
        app: postgresql-mlflow
    spec:
      containers:
      - image: postgres:14.0
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgresql-volume
          mountPath: /var/lib/postgresql/data
          subPath: pgdata
      volumes:
      - name: postgresql-volume
        persistentVolumeClaim:
          claimName: postgresql-mlflow-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: mlflow-system
  labels: 
    app.kubernetes.io/name: minio
spec:
  replicas: 1
  selector:
    matchLabels: 
      app.kubernetes.io/name: minio
  template:
    metadata:
      labels: 
        app.kubernetes.io/name: minio
    spec:
      securityContext:
        fsGroup: 1001 # https://github.com/bitnami/containers/tree/5ea894be67b97fac6adda4a5bcce5703cbd443c7/bitnami/minio#persisting-your-database
      containers:
      - image: "bitnami/minio:2023.7.18-debian-11-r2"
        imagePullPolicy: "IfNotPresent"
        name: minio
        ports:
        - containerPort: 9000
          name: minio
        - containerPort: 9001
          name: minio-console
        resources: 
          limits:
            cpu: 200m
            memory: 512Mi
          requests:
            cpu: 10m
            memory: 128Mi
        volumeMounts:
        - name: minio-storage
          mountPath: /data
      volumes:
      - name: minio-storage
        persistentVolumeClaim:
          claimName: minio-mlflow-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-mlflow-service
  namespace: mlflow-system
spec:
  type: NodePort
  ports:
  - port: 5432
    nodePort: 30432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgresql-mlflow
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: mlflow-system
  labels: 
    app.kubernetes.io/name: minio
spec:
  type: NodePort
  ports:
  - name: minio
    nodePort: 30484
    port: 9000
    protocol: TCP
    targetPort: minio
  - name: minio-console
    nodePort: 30488
    port: 9001
    protocol: TCP
    targetPort: minio-console
  selector: 
    app.kubernetes.io/name: minio
