manifest/ollama-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollama

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ollama
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: ollama
      annotations:
        kubectl.kubernetes.io/default-container: ollama
    spec:
      # These init containers run before your main container and wait for dependencies
      containers:
      - name: ollama
        image: ollama/ollama:latest
        ports:
        - name: http
          containerPort: 11434
          protocol: TCP
        resources:
          requests:
            nvidia.com/gpu: 1
          limits:
            nvidia.com/gpu: 1
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "/script/ollama-model-script.sh"]
        volumeMounts:
          - name: ollama-model-script
            mountPath: "/script"
          - name: ollama-models
            mountPath: "/root/.ollama"
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      tolerations:
        - key: nvidia.com/gpu
          operator: Exists
          effect: NoSchedule
      volumes:
      - name: ollama-model-script
        configMap:
          defaultMode: 0700
          name: ollama-model-script
      - name: ollama-models
        persistentVolumeClaim:
          claimName: ollama-models-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  type: NodePort
  selector:
    name: ollama
  ports:
  - nodePort: 30303
    port: 11434
    protocol: TCP
    targetPort: 11434
